Disable Find-In-Page buttons when no text is entered

This CL fixes a regression caused by https://crrev.com/1660273003 which
enables the buttons of the Find-In-Page bar even if no text is entered
or no search was issued yet.

R=msw@chromium.org
BUG=594097
TEST=FindInPageTest.ButtonsDisabledWithoutText

Review URL: https://codereview.chromium.org/1785033004

Cr-Commit-Position: refs/heads/master@{#381074}

Former-commit-id: afc0733e0630499bea163c4f3cf826c945e7baaf